fixed vertical alignment issue of the close x in modal popup

--- a/src/css/modal_popup.css
+++ b/src/css/modal_popup.css
@@ -41,6 +41,7 @@
     color: #aaa;
     float: right;
     font-size: 28px;
+    line-height: 60px; /* vertically aligns x */
     font-weight: bold;
 }
 
